baml_language/crates/baml_tests/snapshots/basic_types/baml_tests__basic_types__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.GetMixedList() -> (int | string)[] {
    load_const null
    load_const "GetMixedList"
    alloc_map 0
    call baml.llm.call_llm_function
    return
}

function user.GetMixedList$build_request() -> baml.http.Request {
    load_const null
    load_const "GetMixedList"
    alloc_map 0
    call baml.llm.build_request
    return
}

function user.GetMixedList$build_request_stream() -> baml.http.Request {
    load_const null
    load_const "GetMixedList"
    alloc_map 0
    call baml.llm.build_request_stream
    return
}

function user.GetMixedList$parse(json: string) -> (int | string)[] {
    load_const "GetMixedList"
    load_var json
    call baml.llm.parse
    return
}

function user.GetMixedList$parse_stream(sse: baml.http.SseStream) -> baml.llm.Stream {
    load_var sse
    load_const "GetMixedList"
    load_const null
    load_const "__make_stream"
    load_map_element
    call_indirect
    return
}

function user.GetMixedList$render_prompt() -> baml.llm.PromptAst {
    load_const null
    load_const "GetMixedList"
    alloc_map 0
    call baml.llm.render_prompt
    return
}

function user.GetMixedList$stream() -> baml.llm.Stream {
    load_const null
    load_const "GetMixedList"
    alloc_map 0
    call baml.llm.parse
    return
}

function user.GetMixedMap() -> map<string, int | string> {
    load_const null
    load_const "GetMixedMap"
    alloc_map 0
    call baml.llm.call_llm_function
    return
}

function user.GetMixedMap$build_request() -> baml.http.Request {
    load_const null
    load_const "GetMixedMap"
    alloc_map 0
    call baml.llm.build_request
    return
}

function user.GetMixedMap$build_request_stream() -> baml.http.Request {
    load_const null
    load_const "GetMixedMap"
    alloc_map 0
    call baml.llm.build_request_stream
    return
}

function user.GetMixedMap$parse(json: string) -> map<string, int | string> {
    load_const "GetMixedMap"
    load_var json
    call baml.llm.parse
    return
}

function user.GetMixedMap$parse_stream(sse: baml.http.SseStream) -> baml.llm.Stream {
    load_var sse
    load_const "GetMixedMap"
    load_const null
    load_const "__make_stream"
    load_map_element
    call_indirect
    return
}

function user.GetMixedMap$render_prompt() -> baml.llm.PromptAst {
    load_const null
    load_const "GetMixedMap"
    alloc_map 0
    call baml.llm.render_prompt
    return
}

function user.GetMixedMap$stream() -> baml.llm.Stream {
    load_const null
    load_const "GetMixedMap"
    alloc_map 0
    call baml.llm.parse
    return
}

function user.GetStatus() -> Status {
    load_const null
    load_const "GetStatus"
    alloc_map 0
    call baml.llm.call_llm_function
    return
}

function user.GetStatus$build_request() -> baml.http.Request {
    load_const null
    load_const "GetStatus"
    alloc_map 0
    call baml.llm.build_request
    return
}

function user.GetStatus$build_request_stream() -> baml.http.Request {
    load_const null
    load_const "GetStatus"
    alloc_map 0
    call baml.llm.build_request_stream
    return
}

function user.GetStatus$parse(json: string) -> Status {
    load_const "GetStatus"
    load_var json
    call baml.llm.parse
    return
}

function user.GetStatus$parse_stream(sse: baml.http.SseStream) -> baml.llm.Stream {
    load_var sse
    load_const "GetStatus"
    load_const null
    load_const "__make_stream"
    load_map_element
    call_indirect
    return
}

function user.GetStatus$render_prompt() -> baml.llm.PromptAst {
    load_const null
    load_const "GetStatus"
    alloc_map 0
    call baml.llm.render_prompt
    return
}

function user.GetStatus$stream() -> baml.llm.Stream {
    load_const null
    load_const "GetStatus"
    alloc_map 0
    call baml.llm.parse
    return
}

function user.GetUser(id: int) -> User {
    alloc_instance baml.llm.Client
    load_const "openai/gpt-4o"
    init_field .name
    load_const baml.llm.ClientType.Primitive
    alloc_variant baml.llm.ClientType
    init_field .client_type
    alloc_array 0
    init_field .sub_clients
    load_const null
    init_field .retry
    load_const 0
    init_field .counter
    load_const "GetUser"
    load_var id
    load_const "id"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function user.GetUser$build_request(id: int) -> baml.http.Request {
    alloc_instance baml.llm.Client
    load_const "openai/gpt-4o"
    init_field .name
    load_const baml.llm.ClientType.Primitive
    alloc_variant baml.llm.ClientType
    init_field .client_type
    alloc_array 0
    init_field .sub_clients
    load_const null
    init_field .retry
    load_const 0
    init_field .counter
    load_const "GetUser"
    load_var id
    load_const "id"
    alloc_map 1
    call baml.llm.build_request
    return
}

function user.GetUser$build_request_stream(id: int) -> baml.http.Request {
    alloc_instance baml.llm.Client
    load_const "openai/gpt-4o"
    init_field .name
    load_const baml.llm.ClientType.Primitive
    alloc_variant baml.llm.ClientType
    init_field .client_type
    alloc_array 0
    init_field .sub_clients
    load_const null
    init_field .retry
    load_const 0
    init_field .counter
    load_const "GetUser"
    load_var id
    load_const "id"
    alloc_map 1
    call baml.llm.build_request_stream
    return
}

function user.GetUser$parse(json: string) -> User {
    load_const "GetUser"
    load_var json
    call baml.llm.parse
    return
}

function user.GetUser$parse_stream(sse: baml.http.SseStream) -> baml.llm.Stream {
    load_const "internal compiler error: MIR failed to resolve field access .Primitive against class definition 'User' (module_path: [\"user\"]). This class should be in class_fields but isn't."
    call baml.sys.panic
    pop 1
    jump L0

  L0:
    unreachable
}

function user.GetUser$render_prompt(id: int) -> baml.llm.PromptAst {
    alloc_instance baml.llm.Client
    load_const "openai/gpt-4o"
    init_field .name
    load_const baml.llm.ClientType.Primitive
    alloc_variant baml.llm.ClientType
    init_field .client_type
    alloc_array 0
    init_field .sub_clients
    load_const null
    init_field .retry
    load_const 0
    init_field .counter
    load_const "GetUser"
    load_var id
    load_const "id"
    alloc_map 1
    call baml.llm.render_prompt
    return
}

function user.GetUser$stream(id: int) -> baml.llm.Stream {
    alloc_instance baml.llm.Client
    load_const "openai/gpt-4o"
    init_field .name
    load_const null
    init_field .client_type
    alloc_array 0
    init_field .sub_clients
    load_const null
    init_field .retry
    load_const 0
    init_field .counter
    load_const "GetUser"
    load_var id
    load_const "id"
    alloc_map 1
    load_const null
    call_indirect
    return
}
