baml_language/crates/baml_tests/snapshots/basic_types/baml_tests__basic_types__06_codegen2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.GetMixedList() -> int | string[] {
    load_const null
    load_const "GetMixedList"
    alloc_map 0
    call baml.llm.call_llm_function
    return
}

function user.GetMixedList$build_request() -> baml.http.Request {
    load_const "GetMixedList"
    alloc_map 0
    call baml.llm.build_request
    return
}

function user.GetMixedList$render_prompt() -> baml.llm.PromptAst {
    load_const "GetMixedList"
    alloc_map 0
    call baml.llm.render_prompt
    return
}

function user.GetMixedMap() -> map<string, int | string> {
    load_const null
    load_const "GetMixedMap"
    alloc_map 0
    call baml.llm.call_llm_function
    return
}

function user.GetMixedMap$build_request() -> baml.http.Request {
    load_const "GetMixedMap"
    alloc_map 0
    call baml.llm.build_request
    return
}

function user.GetMixedMap$render_prompt() -> baml.llm.PromptAst {
    load_const "GetMixedMap"
    alloc_map 0
    call baml.llm.render_prompt
    return
}

function user.GetStatus() -> user.Status {
    load_const null
    load_const "GetStatus"
    alloc_map 0
    call baml.llm.call_llm_function
    return
}

function user.GetStatus$build_request() -> baml.http.Request {
    load_const "GetStatus"
    alloc_map 0
    call baml.llm.build_request
    return
}

function user.GetStatus$render_prompt() -> baml.llm.PromptAst {
    load_const "GetStatus"
    alloc_map 0
    call baml.llm.render_prompt
    return
}

function user.GetUser(id: int) -> user.User {
    load_const null
    load_const "GetUser"
    load_var id
    load_const "id"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function user.GetUser$build_request(id: int) -> baml.http.Request {
    load_const "GetUser"
    load_var id
    load_const "id"
    alloc_map 1
    call baml.llm.build_request
    return
}

function user.GetUser$render_prompt(id: int) -> baml.llm.PromptAst {
    load_const "GetUser"
    load_var id
    load_const "id"
    alloc_map 1
    call baml.llm.render_prompt
    return
}
